<resources>
    <string name="app_name">AndroidTest_AS</string>
    <string name="beatbox_title">BeatBoxActivity</string>
    <string name="criminal_title">CrimeListActivity</string>
    <string name="crime_pager_title">CrimePagerActivity</string>
    <string name="pic_detail_title">PicDetailActivity</string>
    <string name="photo_gallery_title">PhotoGalleryActivity</string>
    <string name="clear_all_data">Clear all data!</string>
    <string name="add_some_data">Add data</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_item">Delete this item?</string>
    <string name="no_data_tips">No data!</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="title_activity_crime_list">CrimeListActivity</string>
    <string name="date_picker_title">DateSetActivity</string>
    <string name="new_crime">New Crime</string>
    <string name="del_crime">Delete Crime</string>
    <string name="del_crime2">Delete crime!</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <plurals name="subtitle_plurals">
        <item quantity="zero">%1$d crime</item>
        <item quantity="one">%1$d crime</item>
        <item quantity="few">%1$d crimes</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="add_demo_items">Add demo crimes!</string>
    <string name="delete_this_item">Delete this crime?</string>
    <string name="delete_all_items">Delete all crimes!</string>
    <string name="action_settings">Settings</string>
    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
    <string name="poll_running">Poll running</string>
    <string name="poll_stopped">Poll stopped</string>
    <string name="result_cancel">RESULT_CANCELED</string>
    <string name="result_ok">RESULT_OK</string>

    //Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="btn_text_retry">Retry</string>

</resources>
