<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_new_crime"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_crime"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_item_show_subtitle"
        android:title="@string/show_subtitle"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_add_demo_crimes"
        android:title="@string/add_demo_items"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_delete_all"
        android:title="@string/delete_all_items"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_item_delete_crime2"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/del_crime2"
        app:showAsAction="ifRoom|withText"/>
</menu>